[tool.poetry]
name = "pygame_ball"
version = "0.1.0"
description = ""
authors = ["iserk <igor.serkizyuk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
